lab1/Test/L1-A-10-52.output
Error Type B at Line 5
Error Type B at Line 8
Error Type A at Line 30
Error Type B at Line 33
Error Type A at Line 38
Error Type A at Line 39
Error Type A at Line 40
Error Type A at Line 41
Error Type B at Line 41
Error Type B at Line 48
